# playground

./: .gitignore  .tool-versions  Gemfile  README.md  app.js  application.html.haml  chapter1.exs  gulpfile.js  index.html  mix.exs  oreo.js  oreo.min.js  package-lock.json  package.json  template.rb  webpack.config.js
angular-tour-of-heroes/: package-lock.json
app/: index.html
binary-tree/: index.js
card_deck/: deck.ex
ch01/: 1.6.md
chap4/: todo_list.ex
chap6/: todo_list.ex
chromotherapy/: README.md  index.html
config/: application.rb  bootstrap.js  config.exs  dev.exs  initializers.js  prod.exs  routes.rb
daily_drip/: README.md  mix.exs
db/: schema.rb  seeds.rb
docker_installer/: .gitignore  README.md
dynamic-json-decoding/: elm.json
elixir/: .gitattributes
elm/: .tool-versions
elm-binary-base64/: Main.elm
elm-css-properties-scrapper/: .gitignore  package-lock.json
elm-demystify-decoders/: package.json
elm-file-reader/: Main.elm
elm-swapi/: Swapi.elm
elm-tetris/: Block.elm  Controller.elm  README.md  Tetromino.elm  elm-package.json
github_install/: README.md  mix.exs
iam/: Gemfile  mix.exs
java/: .tool-versions
lambda/: .gitignore  greetingsOnDemand.js  output.txt
lib/: phoenix_trello.ex
rust/rust/book-rust-web-development/: .gitignore  Cargo.toml  Dockerfile  build.rs  setup.toml
rust/rust/book-rust-web-development/handle-errors/: Cargo.toml
rust/rust/book-rust-web-development/handle-errors/src/: lib.rs
rust/rust/book-rust-web-development/integration-tests/: Cargo.toml
rust/rust/book-rust-web-development/integration-tests/src/: main.rs
rust/rust/book-rust-web-development/migrations/: 20230223181455_create_accounts_table.up.sql  20230223202306_extend_questions_table.down.sql  20230223202331_extend_answers_table.down.sql
rust/rust/book-rust-web-development/mock-server/: Cargo.toml
rust/rust/book-rust-web-development/mock-server/src/: lib.rs
rust/rust/book-rust-web-development/src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
rust/rust/book-rust-web-development/src/routes/: answer.rs  authentication.rs  question.rs
rust/rust/book-rust-web-development/src/types/: answer.rs  pagination.rs
rust/rust/course-egghead-create-a-digital-garden-cli-with-rust/: Cargo.toml  README.md
rust/rust/course-egghead-create-a-digital-garden-cli-with-rust/src/: main.rs
rust/rust/course-egghead-create-a-digital-garden-cli-with-rust/tests/: integration.rs
rust/rust/course-zerotomastery-rust-programming/activities/: Cargo.toml
rust/rust/course-zerotomastery-rust-programming/activities/src/: math.rs
(+4269 files in other folders)
