[package]
name = "rust-web-development"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
handle-errors = { path = "handle-errors" }
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
