[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "activity"
path = "src/activitylib.rs"

[dependencies]
chrono = "0.4.22"
thiserror = "1.0.38"
test-case = "2.2.2"
crossbeam-channel = "0.5.6"
colored = "2.0.0"
